[tool.poetry]
name = "gov-parser"
version = "0.1.0"
description = ""
authors = ["Derzhak31 <derzhak31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
requests = "^2.32.3"
xmltodict = "^0.14.2"
celery = {extras = ["redis"], version = "^5.4.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
